fix: use popup manager api's and improve readability

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -669,10 +669,6 @@ a, img {
     background-image: url("images/share-fill.svg");
 }
 
-.help {
-    background-image: url("images/discuss-icon.svg");
-}
-
 .user {
     background-image: url("images/circle-user-solid.svg");
 }
